# var_inspector

./: .gitignore  LICENSE  README.md  pyproject.toml  workspace.code-workspace
var_inspector/: README.md  pyproject.toml  var_inspector.py
var_inspector/var_inspector/: __init__.py  var_inspector.py
