[tool.poetry]
name = "var-inspector"
version = "0.1.0"
description = "A package for inspecting and displaying variable information"
authors = ["tyaso777 <49575436+tyaso777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"
ipykernel = "^6.29.4"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
